testsuite/tests/rename/should_fail/T23982b.hs
module T23982b where
  import T23982b_aux (A(..))
  f a = A a
